Add simple Pathfinder unittests